# ros-safmc-quadcopter

./: .gitignore  README.md
2021/ros-wrkspace/src/eraser_dropper/: CMakeLists.txt
2021/ros-wrkspace/src/eraser_dropper/include/: eraser_dropper.hpp
2021/ros-wrkspace/src/px4_mavros/: package.xml  px4_mavros.launch
2021/ros-wrkspace/src/px4_mavros/src/: offb_node.cpp
2021/ros-wrkspace/src/rplidar_ros/: CMakeLists.txt
2021/ros-wrkspace/src/video_streaming/: CMakeLists.txt  README.md
2021/ros-wrkspace/src/video_streaming/src/: main.cpp
2021/video_streaming_basic/: CMakeLists.txt
2021/video_streaming_basic/src/: ground_station.cpp  rpi.cpp
2021/video_streaming_h264/: CMakeLists.txt  README.md
2021/video_streaming_h264/src/: benchmark.cpp  ground_station.cpp  h264.cpp  h264.h  rpi.cpp
2021/video_streaming_jpg/: CMakeLists.txt  README.md  package.xml
2021/video_streaming_jpg/src/: benchmark.cpp  ground_station.cpp  rpi.cpp
wrkspace-2020/src/eraser_dropper/: package.xml
wrkspace-2020/src/eraser_dropper/src/: eraser_dropper.cpp
wrkspace-2020/src/px4_mavros/: CMakeLists.txt
